--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -46,7 +46,7 @@
     rgba(17, 17, 17, 0)
   );
   /* --background-main-image:  url("https://images7.alphacoders.com/428/428134.jpg"); <-- Full Screen Background Image for Nexus Earth Theme */
-  --background-main-image: url("../images/background/nexus-conference.png"); /* <-- Full Screen Background Image for Nexus Earth Theme */
+  --background-main-image: url("../images/background/hero.jpg"); /* <-- Full Screen Background Image for Nexus Earth Theme */
 
   /* FONTS */
   --font-1: "Myriad Pro"; /* <-- Sourced Above in First @font-face*/
@@ -64,6 +64,9 @@ body {
   background-color: #232c39;
   background-image: var(--background-main-gradient),
     var(--background-main-image);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
   font-family: "Roboto", sans-serif;
   overflow-y: hidden;
@@ -107,7 +110,7 @@ body {
 #app-loader {
   grid-area: content;
   position: absolute;
-  top: calc(50% - 150px);
+  top: calc(50% - 190px);
   left: calc(50% - 150px);
   width: 300px;
   height: 300px;
