--- a/app/CSS/controls/tooltip.css
+++ b/app/CSS/controls/tooltip.css
@@ -4,7 +4,7 @@ Switch
 */
 
 :root {
-	--tooltip-background-color: #282828;
+	--tooltip-background-color: var(--color-1);
 	--tooltip-color: #ccc;
 }
 
