--- a/app/components/Loader/style.css
+++ b/app/components/Loader/style.css
@@ -1,3 +1,7 @@
+  #loader {
+    width: 300px;
+    height: 500px;
+  }
   #orbit-container {
     height: 300px;
     width: 300px;
@@ -24,40 +28,40 @@
     background-color: var(--color-5);
   }
   #tritium {
-      position: absolute;
-      left: 110px;
-      top: 120px;
-      width:100px;
-      height:100px;
+    position: absolute;
+    left: 110px;
+    top: 120px;
+    width:100px;
+    height:100px;
   }
   #proton1 {
-      border-radius: 100%;
-      height: 40px;
-      width: 40px;
-      background: radial-gradient(circle at 20px 20px, var(--color-2), var(--color-1));
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    background: radial-gradient(circle at 20px 20px, var(--color-2), var(--color-1));
   }
   #proton2 {
-      border-radius: 100%;
-      height: 40px;
-      width: 40px;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
     margin-top: -40px;
     margin-left: 38px;
-      background: radial-gradient(circle at 20px 20px, var(--color-2), var(--color-1));
+    background: radial-gradient(circle at 20px 20px, var(--color-2), var(--color-1));
   }
   #proton3 {
-      border-radius: 100%;
-      height: 40px;
-      width: 40px;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
     margin: -8px 0 0 20px;
-      background: radial-gradient(circle at 20px 20px, var(--color-2), var(--color-1));
+    background: radial-gradient(circle at 20px 20px, var(--color-2), var(--color-1));
   }
   #version {
     position: absolute;
     font-size: 15px;
     letter-spacing: 10px;
     text-align: center;
-    left: calc(50% - 92px);
-    top: calc(50% + 170px);
+    left: calc(50% - 97px);
+    top: calc(50% + 190px);
   }
   @keyframes orbit {
     100% {
