Auto complete, added popup setting, switched settings to use bool object
Former-commit-id: c09e2dc1c20f8bbd2a1dcda533f6056c6b98b08a

--- a/app/components/Terminal/style.css
+++ b/app/components/Terminal/style.css
@@ -37,6 +37,7 @@
 
 #terminal-console-input {
 	display: flex;
+	position: relative;
 	margin-bottom: 1em;
 }
 
@@ -52,4 +53,3 @@
 	overflow: auto;
 	font-family: var(--mono-font-family);
 }
-
