well crap forgot about unencrypted so one sec let me handle that
Former-commit-id: 6aa359f16203fdb7009e8eb519183e32956bfd77

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -30,6 +30,7 @@
 @import "../components/Settings/style.css";
 @import "../components/Terminal/style.css";
 @import "../components/Transactions/style.css";
+@import "../components/Shapeshift/style.css";
 
 :root {
   /* COLOR PALETTE VARIABLES */
