--- a/app/components/Shapeshift/style.css
+++ b/app/components/Shapeshift/style.css
@@ -1,15 +1,42 @@
 #send-receive {
-	position: relative;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #send-receive > h2 {
-	flex: 0;
+  flex: 0;
 }
 
 #send-receive > .panel {
-	flex: 1;
-	overflow-y: auto;
+  flex: 1;
+  overflow-y: auto;
+}
+
+#shifty-pannel {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#line {
+  flex: 1;
+  width: 4px;
+  height: 100%;
+  margin: 0 auto;
+  background: -webkit-linear-gradient(
+    transparent 0%,
+    var(--color-2) 50%,
+    transparent 100%
+  );
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+#confirmation {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
