Change wallpaper functionality
Former-commit-id: b60b224521a8c61320e419fb278789df0f3d507f

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -48,7 +48,7 @@
   );
   /* --background-main-image:  url("https://images7.alphacoders.com/428/428134.jpg"); <-- Full Screen Background Image for Nexus Earth Theme */
   --background-main-image: url("../images/background/nexus-conference.png"); /* <-- Full Screen Background Image for Nexus Earth Theme */
-
+  
   /* FONTS */
   --font-1: "Myriad Pro"; /* <-- Sourced Above in First @font-face*/
   --font-2: "Franklin Gothic"; /* <-- Sourced Above in Second @font-face */
@@ -65,6 +65,7 @@ body {
   background-color: #232c39;
   background-image: var(--background-main-gradient),
     var(--background-main-image);
+  background-size: cover;
   /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
   font-family: "Roboto", sans-serif;
   overflow-y: hidden;
