--- a/app/CSS/base/buttons.css
+++ b/app/CSS/base/buttons.css
@@ -77,7 +77,7 @@ Button
 
 	background: var(--button-background);
 	box-shadow: var(--button-box-shadow);
-	text-shadow: var(-button-text-shadow);
+	text-shadow: var(--button-text-shadow);
 
 	color: var(--button-color);
 
