--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -14,484 +14,27 @@
   overflow-y: auto;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   padding: 0; /* remove panel padding, sub controls will add their own */
 }
-
-
-
-/* WIDGETS/MODULES START */
-
-/* WIDGETS/MODULES END */
-#nxs-addressbook-module {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  color: var(--color-3);
-  margin-top: 25px;
-}
-
-#nxs-address-display {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-#namesContainer {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  height: 775px;
-}
-
-#namesList {
-  flex: 1;
-
-  width: auto;
-  text-align: left;
-  font-size: 25px;
-  overflow: auto;
-  color: var(--color-3);
-}
-
-#namesList::-webkit-scrollbar {
-  display: none;
-}
-
-#navLetters {
-  padding-left: 20px;
-  display: flex;
-  flex-direction: column;
-  height: fit-content;
-}
-
-.navLetter {
-  flex: 1;
-  color: var(--color-3);
-}
-
-.navLetter:hover {
-  color: var(--color-2) !important ;
-  text-decoration: none;
-}
-
-.navLetterHighlight {
-  flex: 1;
-  text-decoration: none;
-  color: var(--color-2) !important ;
-}
-
-.letterheader {
-  border-bottom: 1px solid var(--color-2);
-  font-size: 30px;
-}
-
-#namesList::-webkit-scrollbar {
-  display: none;
-}
-
-.name {
-  padding-left: 20px;
-}
-
-.name:hover {
-  background-color: var(--color-2);
-}
-
-#contactDetail {
-  flex: 2;
-  float: right;
-}
-
-#contactCard {
-  display: flex;
-  flex-direction: row;
-  margin-left: 15px;
-  border-radius: 15px;
-  border: 3px solid var(--color-2);
-  background-color: var(--color-1);
-}
-
-#profilePic {
-  float: left;
-  padding: 15px;
-}
-
-#cardDetail {
-  flex: 2;
-}
-
-#cardTitle {
-  display: flex;
-}
-
-#editCard {
-  padding-top: 10px;
-  padding-left: 15px;
-  padding-right: 10px;
-  width: 30px;
-}
-
-#titleName {
-  flex: 2;
-  padding-top: 30px;
-  border-bottom: 1px solid var(--color-2);
-  font-size: 30px;
-}
-
-#cardInfo {
-  padding: 20px;
-  padding-left: 0;
-
-  text-align: left;
-  font-size: 20px;
-}
-
-#notesZone {
-  display: flex;
-  flex-direction: row;
-}
-
-#notesLabel {
-  flex: 1;
-}
-
-#notesField {
-  flex: 5;
-  height: 100px;
-  width: 20px;
-  overflow: auto;
-}
-
-/* #notesField::-webkit-scrollbar {
-display: none;
-} */
-
-#mine {
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-
-#notMine {
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-
-#addressesContainer {
-  overflow: auto;
-  max-height: 520px;
-}
-
-#addressesContainer::-webkit-scrollbar {
-  display: none;
-}
-
-.js-modal {
-  position: absolute;
-  max-width: 800px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--color-1);
-  display: flex;
-  padding: 20px;
-  color: var(--color-3);
-}
-
-.js-modal-hidden {
-  display: none;
-}
-
-.js-modal-inner {
-  position: relative;
-  padding: 10px;
-  text-align: left;
-}
-
-.js-modal-close {
-  font-size: 10px;
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  width: 24px;
-  height: 24px;
-  text-align: center;
-  color: var(--color-3);
-  border-width: 0;
-  border-radius: 100%;
-  background-color: var(--color-1);
-  padding: 3px;
-}
-
-#modalcontent {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  color: var(--color-1);
-}
-.newAcctInpt {
-  width: 100%;
-  border: solid !important;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.newAcctInpt.invalid {
-  width: 100%;
-  border: solid red !important;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-#errMessage {
-  color: red;
-  visibility: hidden;
-}
-
-#new-account-address {
-  min-width: 400px;
-}
-
-#new-account-notes {
-  font-family: inherit;
-  min-width: 400px;
-}
-
-.label {
-  display: flex;
-  color: var(--color-1);
-  flex-direction: column;
-  align-items: flex-start;
-
-  padding: 5px;
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.tingle-modal-box {
-  width: fit-content !important;
-}
-#new-account-submit {
-  margin: 0 !important;
-  margin-top: 10px;
-  width: 100%;
-  background-color: var(--color-2);
-  border: var(--color-2);
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-#new-address-submit {
-  margin: 0 !important;
-  margin-top: 10px;
-  width: 100%;
-  background-color: var(--color-2);
-  border: var(--color-2);
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-#new-edit-notes {
-  font-family: inherit;
-  min-width: 400px;
-  max-width: 100%;
-}
-
-#phoneLabel {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-.phoneEntry {
-  width: 40px;
-  border: solid !important;
-  color: var(--color-1);
-  box-sizing: unset !important;
-  text-align: center;
-}
-
-#new-edit-4 {
-  border: solid;
-  margin-left: 4px !important;
-}
-
-#new-edit-3 {
-  border: solid;
-  margin-left: 4px !important;
-}
-
-#new-edit-area {
-  border: solid;
-  margin-left: 0 !important;
-}
-
-#new-account-4 {
-  margin-left: 4px !important;
-}
-
-#new-account-3 {
-  margin-left: 4px !important;
-}
-
-#new-account-area {
-  margin-left: 0 !important;
-}
-
-.addressLabel {
-  position: relative;
-  display: inline-block;
-}
-
-.addressLabel .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #555;
-  color: var(--color-3);
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.addressLabel .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-.addressLabel:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {
-  display: none;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--color-3);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: var(--color-1);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: var(--color-2);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px var(--color-2);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-#sliderContainer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  margin-top: 5px;
-}
-
-input[type="checkbox"].switch {
-  font-size: 30px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 1.75em;
-  height: 1em;
-  background: #ddd;
-  border-radius: 3em;
-  position: relative;
-  cursor: pointer;
-  outline: none;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-input[type="checkbox"].switch:checked {
-  background: #0ebeff;
-}
-
-input[type="checkbox"].switch:after {
-  position: absolute;
-  content: "";
-  width: 1em;
-  height: 1em;
-  border-radius: 50%;
-  background: #fff;
-  -webkit-box-shadow: 0 1px 0.25em rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 0.25em rgba(0, 0, 0, 0.1);
-  -webkit-transform: scale(0.7);
-  transform: scale(0.7);
-  left: 0;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-input[type="checkbox"].switch:checked:after {
-  left: calc(100% - 1em);
-}
-
 
 /*****************************************
 Add Contact Modal
 *****************************************/
 
-.field input,
-.field select,
-.field textarea {
+#addressbook .field input,
+#addressbook .field select,
+#addressbook .field textarea {
   width: 100%;
+  display: block;
+}
+
+#addressbook .field label {
+  font-size: .8125em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  opacity: .5;
 }
 
 /*****************************************
@@ -515,104 +58,145 @@ a.export:hover {
   text-decoration: underline;
 }
 
+#addressbook #addressbook-controls {
+  box-sizing: border-box;
+  flex: 0;
+  width: 100%;
+  padding: 1em;
+  border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+
 /*****************************************
-Address Book Contact List
+Address Book Contacts
 *****************************************/
 
-#addressbook-contact-list {
+#addressbook-contacts {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
 
   flex: 1;
-  flex-basis: 25%;
-  height: 100%;
-  min-width: max-content;
-  max-width: 15em;
+  width: 100%;
   /* padding: 1em; */
-  overflow: hidden;
-
-  /* border-right: 1px solid rgba(255,255,255,0.2); */
-  background-color: rgba(255,255,255,.1);
-}
-
-#addressbook-contact-list svg {
-  text-anchor: middle;
-  fill: white;
-  font-size: 65px;
-  height: 20px;
-  width: 20px;
-  background-color: #555;
-  border-radius: 50%;
-  margin-right: .1em;
-  vertical-align: sub;
-}
-
-#addressbook-contact-list ul{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex: 1;
-
-  margin: 0;
-  padding: 1em;
-  overflow: hidden;
-}
-
-#addressbook-contact-list ul:hover{
   overflow: auto;
 }
 
-#addressbook-contact-list li {
+#addressbook-contacts ul{
+  flex: 1;
+  margin: 0;
+  padding: 1em;
+  /* overflow: hidden; */
+}
+
+#addressbook-contacts ul:hover{
+  /* overflow: auto; */
+}
+
+#addressbook-contacts li {
   box-sizing: border-box;
   width: 100%;
-  padding: .25em .75em;
-  cursor: pointer;
-}
-
-#addressbook-contact-list li:hover {
-  background-color: rgba(255,255,255,0.1);
-}
-
-#addressbook-contact-list li:first-child {
-  margin-top: .5em;
-  margin-bottom: 2em;
-  position: relative;
-}
-
-#addressbook-contact-list li:first-child:after {
-  content: '';
+  padding: 0 1.5em;
+  line-height: 3.5em;
   border-bottom: 1px solid rgba(255,255,255,0.1);
-  width: 100%;
-  display: block;
-  position: absolute;
-  bottom: -1em;
-  left: 0;
+  border-left: 3px solid transparent;
+  cursor: pointer;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
-#addressbook-contact-list button {
-  display: block;
-  justify-self: flex-end;
-  margin: 1em;
+#addressbook-contacts li:hover {
+  background-color: rgba(255,255,255,0.15);
+  border-left-color: var(--color-2);
+}
+
+#addressbook-contacts svg {
+  text-anchor: middle;
+  fill: white;
+  font-size: 50px;
+  height: 32px;
+  width: 32px;
+  background-color: #555;
+  border-radius: 50%;
+  margin-right: .1em;
+  vertical-align: middle;
+}
+
+#addressbook-contacts li span {
+  flex: 1;
+  opacity: .65;
+  font-size: .875em;
+}
+
+#addressbook-contacts .contact-avatar {
+  flex: 0;
+  padding-right: 1em;
+  opacity: 1;
+}
+
+#addressbook-contacts .contact-name {
+  opacity: 1;
+  font-size: 1em;
 }
 
 /*****************************************
-Address Book Contact Details
+Address Book View Contact
 *****************************************/
 
 #addressbook-contact-detail {
   box-sizing: border-box;
-  flex: 1;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 30em;
+  max-width: 100%;
   padding: 1em 2em;
+  background-color: var(--modal-background-color);
+  animation-name: show-contact-view;
+  animation-duration: .5s;
 }
 
-#addressbook-contact-detail #edit-contact {
+#addressbook-contact-detail.close {
+  animation-name: hide-contact-view;
+  animation-duration: .5s;
+}
+
+@keyframes show-contact-view {
+  from {right: -100%;}
+  to {right: 0}
+}
+
+@keyframes hide-contact-view {
+  from {right: 0;}
+  to {right: -100%; opacity: 0}
+}
+
+#addressbook-contact-detail #close-contact {
   display: block;
   position: absolute;
   top: 1.5em;
   right: 1.5em;
   cursor: pointer;
+}
+
+#addressbook-contact-detail #close-contact svg {
+  fill: var(--modal-close-button-color);
+}
+
+#addressbook-contact-detail #close-contact:hover svg {
+  filter: brightness(150%);
+}
+
+#addressbook-contact-detail #edit-contact,
+#addressbook-contact-detail #save-contact  {
+  display: block;
+  position: absolute;
+  bottom: 1.5em;
+  right: 1.5em;
+  cursor: pointer;
+  margin: 0;
 }
 
 #addressbook-contact-detail #edit-contact img {
@@ -626,15 +210,65 @@ Address Book Contact Details
   opacity: 1;
 }
 
-#addressbook-contact-detail h4 {
-  margin: 0;
-  font-size: 1.25em;
-  font-weight: 600;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
-  padding: .25em .5em 1em .5em;
+#addressbook-contact-detail h3 {
+  margin-bottom: 1.5em;
 }
 
-#addressbook-contact-detail svg {
+#addressbook-contact-detail h4 {
+  margin: .5em 0;
+  font-weight: 600;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
+  padding: .5em;
+}
+
+#addressbook-contact-detail .contact-detail,
+#addressbook-contact-detail .contact-address {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  position: relative;
+}
+
+#addressbook-contact-detail .contact-detail label,
+#addressbook-contact-detail .contact-address label {
+  flex: 0;
+  flex-basis: 9em;
+  display: inline-block;
+  padding-left: 1em;
+  font-size: .8125em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  opacity: .5;
+}
+
+#addressbook-contact-detail .contact-detail span {
+  display: block;
+  flex: 1;
+}
+
+#addressbook-contact-detail .contact-detail span input,
+#addressbook-contact-detail .contact-detail span select,
+#addressbook-contact-detail .contact-detail span textarea {
+  font-size: .875em;
+  width: 100%;
+}
+
+#addressbook-contact-detail .contact-address span {
+  display: block;
+  flex: 1;
+  font-family: var(--mono-font-family);
+  font-size: .875em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+
+#addressbook-contact-detail .contact-address span.copied {
+  animation-name: copied;
+  animation-duration: 4s;
+}
+
+#addressbook-contact-detail h3 svg {
   text-anchor: middle;
   fill: white;
   font-size: 48px;
@@ -647,8 +281,7 @@ Address Book Contact Details
 }
 
 #addressbook-contact-detail > div {
-  padding: .75em.5em;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
+  padding: .5em 0;
 }
 
 #addressbook-contact-detail header {
@@ -664,7 +297,46 @@ Address Book Contact Details
   padding: 0;
 }
 
-#addressbook-contact-detail #my-addresses li,
+#addressbook-contact-detail #my-addresses td,
+#addressbook-contact-detail #their-addresses td {
+  padding: .25em .75em;
+  font-family: var(--mono-font-family);
+  font-size: .875em;
+  cursor: pointer;
+  position: relative;
+}
+
+#addressbook-contact-detail #my-addresses td span,
+#addressbook-contact-detail #their-addresses td span{
+  flex: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+#addressbook-contact-detail #my-addresses td img,
+#addressbook-contact-detail #their-addresses td img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 16px;
+  width: 16px;
+  padding: .325em;
+  visibility: hidden;
+}
+
+#addressbook-contact-detail #my-addresses td:hover img,
+#addressbook-contact-detail #their-addresses td:hover img {
+  visibility: initial;
+}
+
+#addressbook-contact-detail #my-addresses td.copied,
+#addressbook-contact-detail #their-addresses td.copied {
+  animation-name: copied;
+  animation-duration: 4s;
+}
+
+/* #addressbook-contact-detail #my-addresses li,
 #addressbook-contact-detail #their-addresses li {
   display: flex;
   padding: .125em 0;
@@ -703,9 +375,82 @@ Address Book Contact Details
 #addressbook-contact-detail #their-addresses li.copied {
   animation-name: copied;
   animation-duration: 4s;
-}
+} */
 
 @keyframes copied {
   from {color: var(--color-2);}
   to {color: var(--body-font-color);}
+}
+
+/*****************************************
+Address Book Edit Contact
+*****************************************/
+
+#addressbook-contact-edit {
+  box-sizing: border-box;
+  flex: 1;
+  height: 100%;
+  padding: 1em 2em;
+}
+
+#addressbook-contact-edit h4 {
+  margin: 0;
+  font-size: 1.25em;
+  font-weight: 600;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
+  padding: .25em .5em 1em 0;
+}
+
+/* #addressbook-contact-edit > div {
+  padding: .75em.5em;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
+} */
+
+#addressbook-contact-edit header {
+  font-size: .8125em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  opacity: .5;
+}
+
+#addressbook-contact-edit #their-addresses {
+  margin: 0;
+  padding: 0;
+}
+
+#addressbook-contact-edit #their-addresses li {
+  display: flex;
+  padding: .125em 0;
+  font-family: var(--mono-font-family);
+  font-size: .875em;
+  cursor: pointer;
+}
+
+#addressbook-contact-edit #their-addresses li span{
+  flex: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+#addressbook-contact-edit #their-addresses li img {
+  visibility: hidden;
+  height: 16px;
+  width: 16px;
+  padding-left: 1em;
+}
+
+#addressbook-contact-edit #their-addresses li img:hover {
+  filter: brightness(75%);
+}
+
+#addressbook-contact-edit #their-addresses li:hover img {
+  visibility: initial;
+}
+
+#addressbook-contact-edit .button {
+  float: right;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
