--- a/app/components/Shapeshift/style.css
+++ b/app/components/Shapeshift/style.css
@@ -39,55 +39,44 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+}
+
+#sendSideConfirm {
 }
 
 /*  */
-select {
-  padding: 3px;
-  margin: 0;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-  -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-  box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
-  background: #f8f8f8;
-  color: #888;
-  border: none;
-  outline: none;
-  display: inline-block;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  cursor: pointer;
+#shifty-pannel .field {
+  display: flex;
+  flex-direction: column;
 }
 
-label {
-  position: relative;
+select {
+  flex: 1;
 }
-label:after {
-  content: "<>";
-  font: 11px "Consolas", monospace;
-  color: #aaa;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-  right: 8px;
-  top: 2px;
-  padding: 0 0 2px;
-  border-bottom: 1px solid #ddd;
-  position: absolute;
-  pointer-events: none;
+
+select.soflow-color {
+  background-image: url(http://i62.tinypic.com/15xvbd5.png),
+    -webkit-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+  background-position: 97% center;
+  background-repeat: no-repeat;
+  border: 1px solid #aaa;
+  color: #555;
+  font-size: inherit;
+  /* margin: 20px; */
+  overflow: hidden;
+  padding: 5px 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 300px;
 }
-label:before {
-  content: "";
-  right: 6px;
-  top: 0px;
-  width: 20px;
-  height: 20px;
-  background: #f8f8f8;
-  position: absolute;
-  pointer-events: none;
-  display: block;
+
+select.soflow-color {
+  background-image: url(http://i62.tinypic.com/15xvbd5.png),
+    -webkit-linear-gradient(var(--color-5), var(--color-5) 40%, var(--color-5));
+  background-color: var(--color-5);
+  /* -webkit-border-radius: 20px; */
+  /* -moz-border-radius: 20px; */
+  /* border-radius: 20px; */
+  padding-left: 15px;
 }
