--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -84,13 +84,11 @@
   margin: 20px;
   border: 3px solid rgb(12, 145, 185);
   border-radius: 10px;
-
   margin-bottom: 15px;
   margin-top: 35px;
   margin-left: 20;
   padding: 8px;
   padding-left: 25px;
-
   padding-bottom: 130px;
   width: 300px;
 }
@@ -131,7 +129,6 @@
   margin-left: 20%;
 } */
 #left-buttons {
-  margin-top: 20%;
   margin-left: 10%;
 }
 
@@ -143,21 +140,21 @@
 }
 .table {
   table-layout: auto;
-  width: 100%;
-  border-collapse: collapse;
-  border: 1px solid rgb(12, 145, 185);
+  width: 30%;
 }
 .tfoot {
-  background-color: rgb(12, 145, 185);
-  display: table;
-  width: 100%;
-  margin-top: 10px;
+  width: 50%;
+  margin-left: 63%;
+  margin-top: -2%;
+  margin-bottom: 3%;
 }
 .thead {
-  width: 100%;
-  margin-top: 10px;
+  width: 30%;
+}
+.td {
   display: block;
 }
-.tbody {
-  display: block;
+#feeCounter {
+  float: right;
+  margin-right: 5%;
 }
