staking only hooks
Former-commit-id: 297001cd3d019e944ef56ab7b3a64e3c70e53bb4

--- a/app/components/Security/style.css
+++ b/app/components/Security/style.css
@@ -55,3 +55,9 @@
   height: fit-content;
   flex: 2;
 }
+
+#checkFeild {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
