--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -20,7 +20,7 @@
 #ftr-line {
   width: 60%;
   height: 2px;
-  margin: 0 auto 10px;
+  margin: 0 auto 5px;
   background: -webkit-linear-gradient(
     left,
     transparent 0%,
@@ -55,15 +55,52 @@
   /* filter: drop-shadow(0px 0px 10px #0ca4fb) grayscale(1) brightness(200%) ; */
 }
 
+#navigation a.active::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  margin-left: 34%;
+  margin-top: 84%;
+  border-radius: 45px;
+  background-color: #01a4e9;
+  animation: pulse-ring 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+}
+
 #navigation a.active::after {
   content: '';
-  height: 2px;
-  width: 65%;
+  height: 6px;
+  width: 6px;
   background-color: var(--color-5);
   position: absolute;
-  bottom: 1px;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: -3px;
+  left: 45%;
+  border-radius: 50%;
+  transform: translateX(-45%);
+  animation: pulse-dot 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) -.4s infinite;
+}
+
+@keyframes pulse-ring {
+  0% {
+    transform: scale(.33);
+  }
+  80%, 100% {
+    opacity: 0;
+  }
+}
+
+@keyframes pulse-dot {
+  0% {
+    transform: scale(.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(.8);
+  }
 }
 
 #navigation a.active:hover {
