--- a/app/CSS/controls/panel.css
+++ b/app/CSS/controls/panel.css
@@ -24,6 +24,7 @@ Panel
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	background-position: center;
 	border: 1px solid rgba(0,0,0,0.1);
 	box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
 	/* text-shadow: 0 1px 3px rgba(0,0,0,0.4); */
