--- a/app/components/Footer/style.css
+++ b/app/components/Footer/style.css
@@ -49,6 +49,7 @@
 #navigation a:hover {
   display: block;
   /* filter: grayscale(0); */
+  margin-top: -4px;
 }
 
 #navigation a.active {
@@ -65,7 +66,7 @@
   margin-left: 34%;
   margin-top: 84%;
   border-radius: 45px;
-  background-color: #01a4e9;
+  background-color: var(--color-2);
   animation: pulse-ring 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
 }
 
