--- a/app/CSS/controls/tooltip.css
+++ b/app/CSS/controls/tooltip.css
@@ -5,7 +5,7 @@ Switch
 
 :root {
 	--tooltip-background-color: var(--color-1);
-	--tooltip-color: #ccc;
+	--tooltip-color: var(--color-5);
 }
 
 .tooltip {
