--- a/app/components/Overview/style.css
+++ b/app/components/Overview/style.css
@@ -25,6 +25,11 @@ Table of Contents
   margin-right: -3px;
   text-shadow: 2px 2px #111111;
 }
+.h2-nospace {
+  font-size: .8em;
+  letter-spacing: 0px;
+  text-shadow: 2px 2px #111111;
+}
 
 /*------------------------------------------------------------------
 I. NEXUS EARTH VISUALIZATION
