just making sure this doesnt go anywhere
Former-commit-id: 445732bbc5d219296c76aca0152956f719de0f27

--- a/app/components/Shapeshift/style.css
+++ b/app/components/Shapeshift/style.css
@@ -34,18 +34,43 @@
   margin-right: 50px;
   margin-left: 50px;
 }
+#confirmationContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 #confirmation {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 #sendSideConfirm {
+  display: flex;
 }
 
-/*  */
+#recieveSideConfirm {
+  display: flex;
+}
+
+.confirmationWords {
+  display: flex;
+  flex-direction: column;
+}
+
+.confirmationWords h3 {
+  margin-bottom: 0;
+}
+
+#sendSideConfirm .confirmationWords {
+  text-align: right;
+}
+
 #shifty-pannel .field {
   display: flex;
   flex-direction: column;
