--- a/app/components/Exchange/style.css
+++ b/app/components/Exchange/style.css
@@ -1,26 +1,15 @@
-#send-receive {
-  position: relative;
-  height: 100%;
+#ExchngeContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
 }
-
-#send-receive > h2 {
-  flex: 0;
-}
-
-#send-receive > .panel {
-  flex: 1;
-  overflow-y: auto;
-}
-
 #shifty-pannel {
-  position: relative;
   display: flex;
-  flex-direction: row;
+  width: 100%;
   justify-content: center;
 }
-
 #line {
   flex: 1;
   width: 4px;
